--- a/index.html
+++ b/index.html
@@ -1,53 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./style.css" rel='stylesheet'>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <title>Home Screen</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./Assets/style.css" rel='stylesheet'>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
+  <script src="./Assets/jQuery.js"></script>
+  <script src="./Assets/script.js"></script>
+  <title>Home Screen</title>
 </head>
+
 <body>
-    <div class ='container'>
-        <div class='nav-bar'>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">MORE FOOTBALL LESS COVID APP</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Closest Hospital</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Saved Game</a>
-                    </li>
-                  </ul>
-                  <span class="navbar-text hide">
-                    NERD
-                  </span>
-                </div>
-              </nav>
+  <div class='container'>
+    <header class=header>
+      <div class='nav-bar'>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">
+            <h1>MORE FOOTBALL LESS COVID APP</h1>
+          </a>
+          <h1></h1><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+
+            <span class="navbar-toggler-icon"></span>
+          </button> </h1>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Closest Hospital</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Saved Game</a>
+              </li>
+            </ul>
+            <span class="navbar-text hide">
+              NERD
+            </span>
+          </div>
+        </nav>
+      </div>
+
+      <div class="container">
+
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Dropdown button
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <p class="dropdown-item">NFC Teams:</p>
+            <a id="ARI" class="dropdown-item" href='#' value="WIN">Arizona Cardinals</a>
+            <a id="ATL" class="dropdown-item" href='#'>Atlanta Falcons</a>
+            <a id="CAR" class="dropdown-item" href='#'>Carolina Panthers</a>
+            <a id="CHI" class="dropdown-item" href='#'>Chicago Bears</a>
+            <a id="DAL" class="dropdown-item" href='#'>Dallas Cowboys</a>
+            <a id="DET" class="dropdown-item" href='#'>Detroit Lions</a>
+            <a id="GB" class="dropdown-item" href='#'>Green Bay Packers</a>
+            <a id="LAR" class="dropdown-item" href='#'>Los Angeles Rams</a>
+            <a id="MIN" class="dropdown-item" href='#'>Minnesota Vikings</a>
+            <a id="NO" class="dropdown-item" href='#'>New Orleans Saints</a>
+            <a id="NYG" class="dropdown-item" href='#'>New York Giants</a>
+            <a id="PHI" class="dropdown-item" href='#'>Philadelphia Eagles</a>
+            <a id="SF" class="dropdown-item" href='#'>San Francisco 49ers</a>
+            <a id="SEA" class="dropdown-item" href='#'>Seattle Seahawks</a>
+            <a id="TB" class="dropdown-item" href='#'>Tampa Bay Buccaneers</a>
+            <a id="WAS" class="dropdown-item" href='#'>Washington Football Team</a>
+            <p class="dropdown-item">AFC Teams:</p>
+            <a id="BAL" class="dropdown-item" href='#'>Baltimore Ravens</a>
+            <a id="BUF" class="dropdown-item" href='#'>Buffalo Bills</a>
+            <a id="CIN" class="dropdown-item" href='#'>Cincinnati Bengals</a>
+            <a id="CLE" class="dropdown-item" href='#'>Cleveland Browns</a>
+            <a id="DEN" class="dropdown-item" href='#'>Denver Broncos</a>
+            <a id="HOU" class="dropdown-item" href='#'>Houston Texans</a>
+            <a id="IND" class="dropdown-item" href='#'>Indianapolis Colts</a>
+            <a id="JAX" class="dropdown-item" href='#'>Jacksonville Jaguars</a>
+            <a id="KC" class="dropdown-item" href='#'>Kansas City Chiefs</a>
+            <a id="LV" class="dropdown-item" href='#'>Las Vegas Raiders</a>
+            <a id="LAC" class="dropdown-item" href='#'>Los Angeles Chargers</a>
+            <a id="MIA" class="dropdown-item" href='#'>Miami Dolphins</a>
+            <a id="NE" class="dropdown-item" href='#'>New England Patriots</a>
+            <a id="NYJ" class="dropdown-item" href='#'>New York Jets</a>
+            <a id="PIT" class="dropdown-item" href='#'>Pittsburgh Steelers</a>
+            <a id="TEN" class="dropdown-item" href='#'>Tennessee Titans</a>
+          </div>
         </div>
+      </div>
+  </div>
 
-        <div class='pickTeam'>
-            <h1>Pick Your Team</h1>
-            <input required type='text' placeholder="Giants">
-        </div>
+  <div class="row">
+    <div class="col-12">
 
-        <div class='schedule'>
-            <h1 id='teamName'>Team Schedule</h1>
 
-            <div class='teamGame'>Game 1</div>
-        </div>
+      <div class='schedule'>
+        <h1 id='teamName'>Team Schedule</h1>
 
+        <div class='teamGame'>Game 1</div>
+      </div>
     </div>
+
+  </div>
+  </header>
 </body>
+
 </html>
