--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class='schedule'>
         <h1 id='teamName'>Team Schedule</h1>
 
-        <div class='teamGame'>Game 1</div>
+        <div id="teamGame" class='teamGame'></div>
       </div>
     </div>
 
