--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
   </script>
   <script src="./Assets/jQuery.js"></script>
-  <script src="./Assets/script.js"></script>
+  <script src="./Assets/index.js"></script>
   <title>Home Screen</title>
 </head>
 
