--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="./Assets/jQuery.js"></script>
   <script src="./Assets/index.js"></script>
   <title>Home Screen</title>
@@ -51,6 +51,7 @@
             </span>
           </div>
         </nav>
+        </div>
       </div>
 
       <div class="container">
@@ -62,56 +63,50 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <p class="dropdown-item">NFC Teams:</p>
-            <a id="ARI" arrayPos="0" class="dropdown-item" href='#' value="WIN">Arizona Cardinals</a>
-            <a id="ATL" arrayPos="1" class="dropdown-item" href='#'>Atlanta Falcons</a>
-            <a id="CAR" arrayPos="2" class="dropdown-item" href='#'>Carolina Panthers</a>
-            <a id="CHI" arrayPos="3" class="dropdown-item" href='#'>Chicago Bears</a>
-            <a id="DAL" arrayPos="4" class="dropdown-item" href='#'>Dallas Cowboys</a>
-            <a id="DET" arrayPos="5" class="dropdown-item" href='#'>Detroit Lions</a>
-            <a id="GB" arrayPos="6" class="dropdown-item" href='#'>Green Bay Packers</a>
-            <a id="LAR" arrayPos="7" class="dropdown-item" href='#'>Los Angeles Rams</a>
-            <a id="MIN" arrayPos="8" class="dropdown-item" href='#'>Minnesota Vikings</a>
-            <a id="NO" arrayPos="9" class="dropdown-item" href='#'>New Orleans Saints</a>
-            <a id="NYG" arrayPos="10" class="dropdown-item" href='#'>New York Giants</a>
-            <a id="PHI" arrayPos="11" class="dropdown-item" href='#'>Philadelphia Eagles</a>
-            <a id="SF" arrayPos="12" class="dropdown-item" href='#'>San Francisco 49ers</a>
-            <a id="SEA" arrayPos="13" class="dropdown-item" href='#'>Seattle Seahawks</a>
-            <a id="TB" arrayPos="14" class="dropdown-item" href='#'>Tampa Bay Buccaneers</a>
-            <a id="WAS" arrayPos="15" class="dropdown-item" href='#'>Washington Football Team</a>
+            <a id="ARI" class="dropdown-item" href='#' value="WIN">Arizona Cardinals</a>
+            <a id="ATL" class="dropdown-item" href='#'>Atlanta Falcons</a>
+            <a id="CAR" class="dropdown-item" href='#'>Carolina Panthers</a>
+            <a id="CHI" class="dropdown-item" href='#'>Chicago Bears</a>
+            <a id="DAL" class="dropdown-item" href='#'>Dallas Cowboys</a>
+            <a id="DET" class="dropdown-item" href='#'>Detroit Lions</a>
+            <a id="GB" class="dropdown-item" href='#'>Green Bay Packers</a>
+            <a id="LAR" class="dropdown-item" href='#'>Los Angeles Rams</a>
+            <a id="MIN" class="dropdown-item" href='#'>Minnesota Vikings</a>
+            <a id="NO" class="dropdown-item" href='#'>New Orleans Saints</a>
+            <a id="NYG" class="dropdown-item" href='#'>New York Giants</a>
+            <a id="PHI" class="dropdown-item" href='#'>Philadelphia Eagles</a>
+            <a id="SF" class="dropdown-item" href='#'>San Francisco 49ers</a>
+            <a id="SEA" class="dropdown-item" href='#'>Seattle Seahawks</a>
+            <a id="TB" class="dropdown-item" href='#'>Tampa Bay Buccaneers</a>
+            <a id="WAS" class="dropdown-item" href='#'>Washington Football Team</a>
             <p class="dropdown-item">AFC Teams:</p>
-            <a id="BAL" arrayPos="16" class="dropdown-item" href='#'>Baltimore Ravens</a>
-            <a id="BUF" arrayPos="17" class="dropdown-item" href='#'>Buffalo Bills</a>
-            <a id="CIN" arrayPos="18" class="dropdown-item" href='#'>Cincinnati Bengals</a>
-            <a id="CLE" arrayPos="19" class="dropdown-item" href='#'>Cleveland Browns</a>
-            <a id="DEN" arrayPos="20" class="dropdown-item" href='#'>Denver Broncos</a>
-            <a id="HOU" arrayPos="21" class="dropdown-item" href='#'>Houston Texans</a>
-            <a id="IND" arrayPos="22" class="dropdown-item" href='#'>Indianapolis Colts</a>
-            <a id="JAX" arrayPos="23" class="dropdown-item" href='#'>Jacksonville Jaguars</a>
-            <a id="KC" arrayPos="24" class="dropdown-item" href='#'>Kansas City Chiefs</a>
-            <a id="LV" arrayPos="25" class="dropdown-item" href='#'>Las Vegas Raiders</a>
-            <a id="LAC" arrayPos="26" class="dropdown-item" href='#'>Los Angeles Chargers</a>
-            <a id="MIA" arrayPos="27" class="dropdown-item" href='#'>Miami Dolphins</a>
-            <a id="NE" arrayPos="28" class="dropdown-item" href='#'>New England Patriots</a>
-            <a id="NYJ" arrayPos="29" class="dropdown-item" href='#'>New York Jets</a>
-            <a id="PIT" arrayPos="30" class="dropdown-item" href='#'>Pittsburgh Steelers</a>
-            <a id="TEN" arrayPos="31" class="dropdown-item" href='#'>Tennessee Titans</a>
+            <a id="BAL" class="dropdown-item" href='#'>Baltimore Ravens</a>
+            <a id="BUF" class="dropdown-item" href='#'>Buffalo Bills</a>
+            <a id="CIN" class="dropdown-item" href='#'>Cincinnati Bengals</a>
+            <a id="CLE" class="dropdown-item" href='#'>Cleveland Browns</a>
+            <a id="DEN" class="dropdown-item" href='#'>Denver Broncos</a>
+            <a id="HOU" class="dropdown-item" href='#'>Houston Texans</a>
+            <a id="IND" class="dropdown-item" href='#'>Indianapolis Colts</a>
+            <a id="JAX" class="dropdown-item" href='#'>Jacksonville Jaguars</a>
+            <a id="KC" class="dropdown-item" href='#'>Kansas City Chiefs</a>
+            <a id="LV" class="dropdown-item" href='#'>Las Vegas Raiders</a>
+            <a id="LAC" class="dropdown-item" href='#'>Los Angeles Chargers</a>
+            <a id="MIA" class="dropdown-item" href='#'>Miami Dolphins</a>
+            <a id="NE" class="dropdown-item" href='#'>New England Patriots</a>
+            <a id="NYJ" class="dropdown-item" href='#'>New York Jets</a>
+            <a id="PIT" class="dropdown-item" href='#'>Pittsburgh Steelers</a>
+            <a id="TEN" class="dropdown-item" href='#'>Tennessee Titans</a>
           </div>
         </div>
       </div>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-
-
       <div class='schedule'>
-        <h1 id='teamName'>Team Schedule</h1>
+        <h1 id='teamName'></h1>
 
         <div id="teamGame" class='teamGame'></div>
       </div>
-    </div>
-
-  </div>
+    
   </header>
 </body>
 
