--- a/index.html
+++ b/index.html
@@ -113,19 +113,20 @@
     <!--schedule renders here; starts with 50vh height, expands to fit content  -->
     <div class='schedule section-bg'>
       <h2 id='teamName' class="mb-5"></h2>
-
       <ul id="teamGame" class='teamGame'>
-        </table>
     </div>
+
+
+    <!-- covid risk data renders here -->
+    <div id="risk-info" class="section-bg">
+      <div id="cases"></div>
+      <div id="cityRisk"></div>
+      <div id="availableSeats"></div>
+      <div id="btwnSeats"></div>
+    </div>
+
   </main>
 
-  <!-- covid risk data renders here -->
-  <div id="covid-risk">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, neque repudiandae necessitatibus ad eaque ullam
-    eius nostrum dolores quibusdam tenetur numquam voluptatibus temporibus natus explicabo excepturi laboriosam fugiat
-    hic veniam!
-
-  </div>
 
 
   <footer class="footer">
