updated UI, Maps API problem

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./Assets/style.css" rel='stylesheet'>
+
+  <!-- load stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link href="./Assets/style.css" rel='stylesheet'>
+  <!-- load font-awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <!-- load JS libraries -->
+  <!-- load JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -17,19 +20,16 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
-   
-
-    <link rel="stylesheet" type="text/css" href="./style.css" />
   <script src="./Assets/index.js"></script>
-
-  <title>Football>COVID</title>
   <!-- Google Maps -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIe1mV6aksKfFkYsuJHOmQgse94B6ZHzM&callback=initMap&libraries=&v=weekly"
-      defer
-    ></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIe1mV6aksKfFkYsuJHOmQgse94B6ZHzM&callback=initMap&libraries=&v=weekly"
+    defer></script>
+
+  <title>Football>COVID</title>
 </head>
+
 
 <body class="page-wrapper">
   <!-- background photo by Gravitylicious.com from Pexels -->
@@ -45,11 +45,11 @@
     <div class="hero section-bg">
       <div class="intro-text">
         <h3 class="mb-4">Know the COVID risk before you buy your tickets!</h3>
-        <p class="mb-3">Get to the game in three easy steps:</p>
+        <p class="mb-3 font-weight-bold">Get to the game in three easy steps:</p>
       </div>
       <div class="row">
         <div class="col-sm-4">
-          <div class="card text-center bg-transparent">
+          <div class="card text-center">
             <div class="card-body">
               <i class="fas fa-user-friends fa-3x"></i>
               <p class="card-text mt-2">Select your team</p>
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="col-sm-4">
-          <div class="card text-center bg-transparent">
+          <div class="card text-center">
             <div class="card-body">
               <i class="far fa-list-alt fa-3x"></i>
               <p class="card-text mt-2">Choose your game</p>
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="col-sm-4">
-          <div class="card text-center bg-transparent">
+          <div class="card text-center">
             <div class="card-body">
               <i class="fas fa-briefcase-medical fa-3x"></i>
               <p class="card-text mt-2">Evaluate your risk</p>
@@ -78,12 +78,12 @@
 
     <!-- Code for the dropdown menu -->
     <div class="dropdown text-center">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
+      <button class="btn btn-secondary dropdown-toggle btn-lg" type="button" id="dropdownMenuButton"
+        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Select your team
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <h5 class="dropdown-item font-weight-bold">NFC Teams:</h5>
+        <h5 class="dropdown-item font-weight-bold mb-0">NFC Teams:</h5>
         <a id="ARI" class="dropdown-item" href='#' value="WIN">Arizona Cardinals</a>
         <a id="ATL" class="dropdown-item" href='#'>Atlanta Falcons</a>
         <a id="CAR" class="dropdown-item" href='#'>Carolina Panthers</a>
@@ -100,7 +100,7 @@
         <a id="SEA" class="dropdown-item" href='#'>Seattle Seahawks</a>
         <a id="TB" class="dropdown-item" href='#'>Tampa Bay Buccaneers</a>
         <a id="WAS" class="dropdown-item" href='#'>Washington Football Team</a>
-        <h5 class="dropdown-item font-weight-bold mt-2">AFC Teams:</h5>
+        <h5 class="dropdown-item font-weight-bold mt-2 mb-0">AFC Teams:</h5>
         <a id="BAL" class="dropdown-item" href='#'>Baltimore Ravens</a>
         <a id="BUF" class="dropdown-item" href='#'>Buffalo Bills</a>
         <a id="CIN" class="dropdown-item" href='#'>Cincinnati Bengals</a>
@@ -120,29 +120,33 @@
       </div>
     </div>
 
-    <!--schedule renders here; starts with 50vh height, expands to fit content  -->
-    <div class='schedule section-bg'>
-      <h2 id='teamName' class="mb-5"></h2>
-      <ul id="teamGame" class='teamGame'>
+    <!--schedule renders here; starts hidden, shows onclick and expands to fit content -->
+    <div id="scheduleArea" class="schedule section-bg d-none">
+      <h2 id="teamName" class="mb-5"></h2>
+      <ul id="teamGame" class="teamGame">
     </div>
 
     <!-- covid risk data renders here -->
     <div id="risk-info" class="section-bg d-none">
       <h2 id="stadium" class="text-center"></h2>
-      <h5 id="city" class="text-center mb-3"></h5>
-      <p>Number of Cases: <span id="cases"></span></p>
-      <p>City Risk Level: <span id="cityRisk"></span></p>
-      <p>Total Available Seats (Adjusted COVID risk): <span id="availableSeats"></span></p>
-      <p>Seats in between seats (based on COVID risk): <span id="btwnSeats"></span></p>
+      <h5 id="city" class="text-center mb-4"></h5>
+      <div class="row">
+        <p class="riskbox font-weight-bold col-md-6">Number of Cases: <span class="riskdata" id="cases"></span></p>
+        <p class="riskbox font-weight-bold col-md-6">State Risk Level: <span class="riskdata" id="cityRisk"></span></p>
+        <p class="riskbox font-weight-bold col-md-6">Adjusted Capacity: <span class="riskdata"
+            id="availableSeats"></span></p>
+        <p class="riskbox font-weight-bold col-md-6">Empty Seats Between: <span class="riskdata" id="btwnSeats"></span>
+        </p>
+      </div>
     </div>
-    
-    <div id="map"></div>
+
+    <div id="map" class="d-none"></div>
 
   </main>
 
 
 
-  <footer class="footer">
+  <footer class="footer mt-5">
     <p class="blackbg mb-0">Brought to you by: Adam, Charles, Jake, and Manuel </p>
   </footer>
 </body>
